// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must correctly identify ranges of entities 1`] = `
Array [
  Array [
    0,
    1,
  ],
  Array [
    1,
    4,
  ],
  Array [
    4,
    5,
  ],
]
`;

exports[`must correctly identify ranges of styles 1`] = `
Array [
  Array [
    0,
    1,
  ],
  Array [
    1,
    3,
  ],
  Array [
    3,
    4,
  ],
  Array [
    4,
    5,
  ],
]
`;

exports[`must have appropriate default values 1`] = `"a"`;

exports[`must have appropriate default values 2`] = `"Alpha"`;

exports[`must have appropriate default values 3`] = `"unstyled"`;

exports[`must have appropriate default values 4`] = `5`;

exports[`must have appropriate default values 5`] = `5`;

exports[`must have appropriate default values 6`] = `
Array [
  Object {
    "entity": null,
    "style": Array [],
  },
  Object {
    "entity": null,
    "style": Array [],
  },
  Object {
    "entity": null,
    "style": Array [],
  },
  Object {
    "entity": null,
    "style": Array [],
  },
  Object {
    "entity": null,
    "style": Array [],
  },
]
`;

exports[`must properly retrieve entity at offset 1`] = `"x"`;

exports[`must properly retrieve entity at offset 2`] = `null`;

exports[`must properly retrieve entity at offset 3`] = `null`;

exports[`must properly retrieve entity at offset 4`] = `null`;

exports[`must properly retrieve entity at offset 5`] = `"x"`;

exports[`must properly retrieve style at offset 1`] = `
Array [
  "BOLD",
]
`;

exports[`must properly retrieve style at offset 2`] = `Array []`;

exports[`must properly retrieve style at offset 3`] = `Array []`;

exports[`must properly retrieve style at offset 4`] = `
Array [
  "BOLD",
]
`;

exports[`must properly retrieve style at offset 5`] = `Array []`;

exports[`must provide default values 1`] = `"unstyled"`;

exports[`must provide default values 2`] = `""`;

exports[`must provide default values 3`] = `true`;

exports[`must retrieve properties 1`] = `"a"`;

exports[`must retrieve properties 2`] = `"Alpha"`;

exports[`must retrieve properties 3`] = `"unstyled"`;

exports[`must retrieve properties 4`] = `5`;

exports[`must retrieve properties 5`] = `5`;
